fix wrap-head icon click

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2698,6 +2698,7 @@ footer {
     height: 50px;
     display: inline-block;
     margin-bottom: 0;
+    z-index: 3;
 }
 .wrap-features .item .wrap-head:hover {
     cursor: pointer;
